--- a/generate.ipynb
+++ b/generate.ipynb
@@ -5,7 +5,15 @@
    "id": "e4a204d0-91c2-4a6b-8a02-b61130894236",
    "metadata": {},
    "source": [
-    "imports:"
+    "# Run to generate the events"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0a8875e-3b20-475c-9af5-f7aa50140f5f",
+   "metadata": {},
+   "source": [
+    "initial imports:"
    ]
   },
   {
