Jupyter notebooks for generation and hits plot

--- a/generate.ipynb
+++ b/generate.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4a204d0-91c2-4a6b-8a02-b61130894236",
-   "metadata": {},
-   "source": [
-    "# Run to generate the events"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b0a8875e-3b20-475c-9af5-f7aa50140f5f",
    "metadata": {},
    "source": [
@@ -18,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a9f8201d-2649-41d1-bbbf-7c10ef7bf6b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to JupyROOT 6.28/04\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ctypes import c_int, c_double\n",
     "from ROOT import TFile, TTree, std, TF1, TF2"
@@ -45,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "82cde137-d7c7-4bfa-b366-7c983e8a599a",
    "metadata": {},
    "outputs": [],
@@ -59,28 +43,17 @@
    "id": "b0a60dd0-df89-483e-9f19-4e13f217ac2c",
    "metadata": {},
    "source": [
-    "Forward hits"
+    "Branch for number of forward hits, needs c_int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "59b915d4-f2f8-492b-b5ed-acb8409e9bec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<cppyy.gbl.TBranch object at 0x55f23e979d80>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nhits = c_int(0)\n",
+    "nhits = c_int(0) # object of c_int initialized to 0\n",
     "tree.Branch(\"nhits\", nhits, \"nhits/I\")"
    ]
   },
@@ -89,31 +62,37 @@
    "id": "0ff37cd3-e49a-4baa-b633-3902fa411535",
    "metadata": {},
    "source": [
-    "Track points"
+    "std::vector for track points (int) and eta (double)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d14c5ab7-d2b5-4096-b1fb-2b258f3ea11f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<cppyy.gbl.TBranchElement object at 0x55f2400d4450>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tracks_npoints = std.vector(\"int\")()\n",
+    "#vector for eta (double) to come here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30d004d8-dbdb-478c-9045-cd90fe4914c8",
+   "metadata": {},
+   "source": [
+    "Track branches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bad22fe1-1b6f-438d-ac37-9686cbd26734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tree.Branch(\"tracks_npoints\", tracks_npoints)\n",
-    "tracks_eta = std.vector(\"double\")()\n",
-    "tree.Branch(\"tracks_eta\", tracks_eta)"
+    "#branch for eta here"
    ]
   },
   {
@@ -126,13 +105,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b6d369a8-b875-4fda-a5db-04922d1ed588",
    "metadata": {},
    "outputs": [],
    "source": [
     "landau = TF1(\"landau\", \"TMath::Landau(x,[0],[1])\", 0, 40)\n",
-    "landau.SetParameters(4, 1)"
+    "landau.SetParameters(4, 1) #initialize the [0] and [1] parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9e98be4-d089-42e4-81c0-04c28007dcb7",
+   "metadata": {},
+   "source": [
+    "Poisson distribution for number of tracks in event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c976a89-7ff4-4e95-bbdd-da85a2319353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ntrk = 6 # mean of 6\n",
+    "poisson = TF1(\"poisson\", \"TMath::Power([0], Int_t(TMath::Floor(x)) )\\\n",
+    "    *TMath::Exp(-[0])/TMath::Factorial( Int_t(TMath::Floor(x)) )\", 0, 12*ntrk)\n",
+    "poisson.SetParameter(0, ntrk) # set the mean as the only parameter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb365d5d-3734-4c5c-bd4e-92d51b15ac53",
+   "metadata": {},
+   "source": [
+    "2D Gaussian for tracks eta and number of points, positive in y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed085f6-3dbd-4cf7-b43c-af799acb3b74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gauss2d = TF2(\"gauss2d\", \"TMath::Exp(-x*x-y*y)\", -3, 3, 0, 3)"
    ]
   },
   {
@@ -145,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a874bdbd-9509-4ef7-983b-5f8e53e2d481",
    "metadata": {},
    "outputs": [],
@@ -163,13 +181,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "50340eb9-038d-41d0-8d22-994278de0bd7",
    "metadata": {},
    "outputs": [],
    "source": [
     "for iev in range(nev):\n",
+    "    #get number of hits in the event\n",
     "    nhits.value = int(landau.GetRandom())\n",
+    "    \n",
+    "    #clear the vectors for the next event\n",
+    "    tracks_npoints.clear()\n",
+    "    #clear for eta here\n",
+    "    \n",
+    "    #tracks nested loop by Poisson distribution\n",
+    "    for itrk in range(int(poisson.GetRandom())):\n",
+    "        pass\n",
+    "        \n",
+    "        #variables for pass-by-reference to come here\n",
+    "        \n",
+    "        #sets the eta and npoints by reference\n",
+    "        #gauss2d.GetRandom2(...\n",
+    "        \n",
+    "        #add the track parameters, scaled int for points\n",
+    "        #tracks_npoints.push_back(int(100*npoints.value))\n",
+    "        #push_back for eta here\n",
+    "\n",
+    "    #fill the tree for the event\n",
     "    tree.Fill()"
    ]
   },
@@ -183,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0e9480d3-19d8-4497-93d7-cd7eef838d7e",
    "metadata": {},
    "outputs": [],
